<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_directions"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:title="@string/title_directions" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/title_info" />

    <item
        android:id="@+id/navigation_shoutout"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_shoutout" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

</menu>
