<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.malemone.apps.malemone.RegisterActivity">

    <include layout="@layout/page_header"/>

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="@dimen/dp_100"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        android:padding="@dimen/dp_10"
        android:layout_height="@dimen/dp_100"
        android:contentDescription="@string/img_description" />

    <LinearLayout
        android:layout_marginTop="@dimen/dp_40"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_register_fullname"
            android:layout_height="@dimen/dp_55"
            android:hint="@string/field_full_name"
            android:inputType="text"
            android:background="@null"
            android:layout_gravity="center"
            android:maxLength="32"
            style="@style/reg_text"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_25"
            android:background="@drawable/line"
            android:layout_height="@dimen/dp_.5"
            android:contentDescription="@string/img_description"/>

        <EditText
            android:id="@+id/input_register_email"
            android:layout_height="@dimen/dp_55"
            android:hint="@string/field_email_address"
            android:inputType="textEmailAddress"
            android:background="@null"
            android:layout_gravity="center"
            android:maxLength="32"
            style="@style/reg_text"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_25"
            android:background="@drawable/line"
            android:layout_height="@dimen/dp_.5"
            android:contentDescription="@string/img_description"/>

        <EditText
            android:id="@+id/input_register_password"
            android:layout_height="@dimen/dp_55"
            android:hint="@string/field_password"
            android:inputType="textPassword"
            android:background="@null"
            android:layout_gravity="center"
            android:maxLength="32"
            style="@style/reg_text"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_25"
            android:background="@drawable/line"
            android:layout_height="@dimen/dp_.5"
            android:contentDescription="@string/img_description"/>

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:text="@string/btn_register"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_25"
            android:textSize="@dimen/sp_18"
            android:gravity="center"
            android:clickable="true"
            android:letterSpacing="0.2"
            android:layout_marginTop="@dimen/dp_10"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@drawable/btn_primary_color_text_selector_reverse"
            android:background="@drawable/btn"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/link_view_login"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_width="match_parent"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/colorAccent"
            android:paddingTop="@dimen/dp_4"
            android:paddingBottom="@dimen/dp_4"
            android:paddingLeft="@dimen/dp_4"
            android:paddingRight="@dimen/dp_15"
            android:singleLine="true"
            android:gravity="center"
            android:text="@string/login_registered_user"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
