<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.malemone.apps.malemone.Fragments.DirectionsMainFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginTop="@dimen/dp_55">

        <ImageView
            android:layout_width="match_parent"
            android:background="@drawable/line3"
            android:clickable="true"
            android:layout_height="@dimen/dp_.5"
            android:contentDescription="@string/img_description"/>

        <EditText
            android:id="@+id/input_starting_point"
            android:layout_height="@dimen/dp_55"
            android:hint="@string/field_starting_point"
            android:inputType="text"
            android:background="@null"
            android:layout_gravity="center"
            android:maxLength="32"
            style="@style/reg_text"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_25"
            android:background="@drawable/line"
            android:layout_height="@dimen/dp_.5"
            android:contentDescription="@string/img_description"/>

        <EditText
            android:id="@+id/input_destination_point"
            android:layout_height="@dimen/dp_55"
            android:hint="@string/field_destination_point"
            android:inputType="text"
            android:background="@null"
            android:layout_gravity="center"
            android:maxLength="32"
            style="@style/reg_text"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_25"
            android:background="@drawable/line"
            android:layout_height="@dimen/dp_.5"
            android:contentDescription="@string/img_description"/>

        <Button
            android:id="@+id/button_find_destination"
            android:layout_width="match_parent"
            android:text="@string/btn_find_destination"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_25"
            android:textSize="@dimen/sp_18"
            android:gravity="center"
            android:clickable="true"
            android:letterSpacing="0.2"
            android:layout_marginTop="@dimen/dp_10"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@drawable/btn_primary_color_text_selector_reverse"
            android:background="@drawable/btn"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>

</FrameLayout>
