<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.malemone.apps.malemone.DirectionsActivity">

    <include
        android:id="@+id/include"
        layout="@layout/page_header" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginTop="@dimen/dp_55">

        <ImageView
            android:layout_width="match_parent"
            android:background="@drawable/line3"
            android:clickable="true"
            android:layout_height="@dimen/dp_.5"
            android:contentDescription="@string/img_description"/>

        <EditText
            android:id="@+id/input_starting_point"
            android:layout_height="@dimen/dp_55"
            android:hint="@string/field_starting_point"
            android:inputType="text"
            android:background="@null"
            android:layout_gravity="center"
            android:maxLength="32"
            style="@style/reg_text"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_25"
            android:background="@drawable/line"
            android:layout_height="@dimen/dp_.5"
            android:contentDescription="@string/img_description"/>

        <EditText
            android:id="@+id/input_destination_point"
            android:layout_height="@dimen/dp_55"
            android:hint="@string/field_destination_point"
            android:inputType="text"
            android:background="@null"
            android:layout_gravity="center"
            android:maxLength="32"
            style="@style/reg_text"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_25"
            android:background="@drawable/line"
            android:layout_height="@dimen/dp_.5"
            android:contentDescription="@string/img_description"/>

        <Button
            android:id="@+id/button_find_destination"
            android:layout_width="match_parent"
            android:text="@string/btn_find_destination"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_25"
            android:textSize="@dimen/sp_18"
            android:gravity="center"
            android:clickable="true"
            android:letterSpacing="0.2"
            android:layout_marginTop="@dimen/dp_10"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@drawable/btn_primary_color_text_selector_reverse"
            android:background="@drawable/btn"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

</android.support.constraint.ConstraintLayout>
